<resources>
    <string name="app_name" translatable="false">PathPilot</string>
    <string name="content_description_pathpilot_icon" translatable="false">PathPilot icon</string>
    <string name="content_description_plus_icon" translatable="false">Plus icon</string>
    <string name="error_email_password_field_empty">Email and password must not be empty</string>
    <string name="error_email_invalid">Email is invalid</string>
    <string name="sign_in">Sign in</string>
    <string name="dont_have_account">Don\'t have an account ?</string>
    <string name="link_sign_up"><u>Sign up now</u></string>
    <string name="account_created_successfully">Account created successfully</string>
    <string name="success">Success</string>
    <string name="first_name">First name</string>
    <string name="placeholder_first_name">John</string>
    <string name="last_name">Last name</string>
    <string name="placeholder_last_name">Doe</string>
    <string name="position_lat">Latitude</string>
    <string name="placeholder_position_lat">41.40338</string>
    <string name="position_long">Longitude</string>
    <string name="placeholder_position_long">2.17403</string>
    <string name="email">Email</string>
    <string name="placeholder_email">example@mail.com</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Create account</string>
    <string name="already_account">Already have an account ?</string>
    <string name="link_sign_in"><u>Sign in now</u></string>
    <string name="label_address"><u>Postal address</u></string>
    <string name="create_client">Create client</string>
    <string name="mandatory_fields"><u>Mandatory fields</u></string>
    <string name="company_name">Company name</string>
    <string name="optional_fields"><u>Optional fields</u></string>
    <string name="contact_informations">Contact information</string>
    <string name="description">Description</string>
    <string name="description_placeholder">Write your description here</string>
    <string name="label_phone_number">Phone number</string>
    <string name="placeholder_phone_number">0785849612</string>
    <string name="client_type">Client type:</string>
    <string name="radio_client">Client</string>
    <string name="radio_prospect">Prospect</string>
    <string name="please_fix_the_following_errors">Please fix the following errors:</string>
    <string name="first_name_blank">Enter a first name</string>
    <string name="last_name_blank">Enter a last name</string>
    <string name="latitude_not_float">Latitude must be a number</string>
    <string name="latitude_blank">Enter a latitude</string>
    <string name="latitude_not_included">Latitude must be between -90° et 90°</string>
    <string name="longitude_not_float">Longitude must be a number</string>
    <string name="longitude_blank">Enter a longitude</string>
    <string name="longitude_not_included">Longitude must be between -180° and 180°</string>
    <string name="mail_blank">Enter a mail</string>
    <string name="mail_regex_invalided">Email must be written as follows: jhon.doe@path-pilot.en, jhon@mail.com …</string>
    <string name="password_blank">Enter a password</string>
    <string name="password_min_size_error">Password must be at least 8 characters long</string>
    <string name="phone_number_blank">Enter a phone number</string>
    <string name="phone_number_invalid">Phone number is invalid</string>
    <string name="company_name_blank">Enter a company name</string>
    <string name="description_blank">Enter a description</string>
    <string name="confirm_password_blank">Confirm your password</string>
    <string name="confirm_password_not_same">Write a second time your password to confirm it</string>
    <string name="address_missing">Select your position</string>
    <string name="informations">2024 IUT de Rodez. All copyright, all copyleft</string>
    <string name="client_contact">Contact</string>
    <string name="delete_client">Delete the client</string>
    <string name="warning_delete_client">By deleting this client, you will also delete the itineraries and associated routes. Are you sure you want to continue?</string>
    <string name="yes_delete_client">Yes, deleted the client</string>
    <string name="dont_delete">Do not delete</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="ok">OK</string>
    <string name="network_error_unable_to_connect_to_the_server">Network error. Unable to connect to the server.</string>
    <string name="authentication_failed_give_valid_credentials">Authentication failed. Please give valid credentials.</string>
    <string name="unable_to_process_server_response">Unable to process server response.</string>
    <string name="connection_timed_out">Connection timed out. Please try again.</string>
    <string name="bad_request">Bad Request. Please check your input.</string>
    <string name="unauthorized">Unauthorized. Please log in again.</string>
    <string name="forbidden_dont_have_permision_to_access">Forbidden. You don\'t have permission to access this resource.</string>
    <string name="requested_resource_not_found">Requested resource not found.</string>
    <string name="internal_server_error">Internal server error. Please try again later.</string>
    <string name="service_unavailable">Service unavailable. Server is temporarily overloaded.</string>
    <string name="unknown_server_error">Server error. Status code: %d</string>
    <string name="unknown_error_occurred">Unknown error occurred</string>
    <string name="no_internet_connection">No internet connection. Please check your network settings.</string>
    <string name="error_title">Warning</string>
    <string name="error_max_clients_per_itinerary">You can\'t add more than 8 clients in an itinerary</string>
    <string name="error_min_clients_per_itinerary">You have to add a client to create an itinerary to create it</string>
    <string name="itinerary">Itinerary</string>
    <string name="title_list_clients_added_for_itinerary"><u>Clients added</u></string>
    <string name="button_create_itinerary">Create itinerary</string>
    <string name="header_create_itinerary">Create itinerary</string>
    <string name="list_clients_to_add">Choosing clients</string>
    <string name="header_itineraries_list">Itineraries</string>
    <string name="header_clients_list">Clients</string>
    <string name="itinerary_number">Itinerary n°</string>
    <string name="itinerary_coordinates">"Home : "</string>
    <string name="itinerary_total_stops">"Total stops: "</string>
    <string name="select_client_to_create_itinerary">Select clients</string>
    <string name="client_address_not_found">Address not found</string>
    <string name="delete_itinerary">Delete</string>
    <string name="cancel_creation_itinerary">Cancel</string>
    <string name="button_create_new_route">Create a new route</string>
    <string name="select_position">Select position</string>
    <string name="validate">Validate</string>
    <string name="adress_not_found">The given address has not been found</string>
    <string name="search">Search</string>
    <string name="address_unknown">Unknown address</string>
    <string name="validate_selected_position">Validate the selected position</string>
    <string name="next_page">Next page</string>
    <string name="previous_page">Previous page</string>
    <string name="need_to_allow_location_permission">You need to allow the location permission to use the map.</string>
    <string name="no_you_can_t_use_this_feature">No (You can\'t use this feature)</string>
    <string name="yes_give_access">Yes give access</string>
    <string name="distance_in_km">%.2f km</string>
    <string name="counter_visited_clients">Visited clients: %d/%d</string>
    <string name="error_while_drawing_the_road">Error while drawing the road</string>
    <string name="error_while_searching">Error during research:</string>
    <string name="no_itinerary_retrieve">No itinerary retrieved</string>
    <string name="no_token_retrieve">No token retrieved</string>
    <string name="client_near_you">%s is near you</string>
    <string name="client_near_you_description">%s at %s is at %.2f m from you</string>
    <string name="route_is_stopped_action_unavailable">The route is stopped, action unavailable</string>
    <string name="long_click_to_stop_the_route">Long click to stop the route</string>
    <string name="route_stopped">Route finished</string>
    <string name="item_menu_title_skip_client">Skip</string>
    <string name="client_state_visited">visited</string>
    <string name="client_state_not_visited">not visited</string>
    <string name="client_state_skipped">skipped</string>
    <string name="toast_client_already_skipped_or_visited_client">You can\'t open the menu on a visited or skipped client.</string>
    <string name="loading">Loading…</string>
    <string name="logging_in">Logging in…</string>
    <string name="creating_account">Creating account…</string>
    <string name="progress_creating_route">Creating route…</string>
    <string name="progress_deleting_client">Deleting client…</string>
    <string name="progress_adding_client">Adding client…</string>
    <string name="progress_fetching_clients">Fetching clients…</string>
    <string name="progress_deleting_itinerary">Deleting itinerary…</string>
    <string name="progress_fetching_itineraries">Fetching itineraries…</string>
    <string name="progress_creating_itinerary">Creating itinerary…</string>
    <string name="no_route_retrieved">No Route retrieved</string>
    <string name="route_completed">Route finished, see the map</string>
    <string name="button_start_route">Start route</string>
    <string name="button_resume_route">Resume route</string>
    <string name="route_info_header">Informations about route</string>
    <string name="header_routes_list">Routes</string>
    <string name="route_address">"Home : "</string>
    <string name="route_begin_date">"Begin date : "</string>
    <string name="route_state_paused">"Paused"</string>
    <string name="route_state_completed">"Completed"</string>
    <string name="route_state_stopped">"Stopped"</string>
    <string name="route_state_not_started">"Not started"</string>
    <string name="delete_route">Delete</string>
    <string name="refresh">Refresh</string>
    <string name="message_deleting_route">Deleting route...</string>
    <string name="home">Home</string>
    <string name="title_select_itinerary">Select an itinerary:</string>
    <string name="select_itinerary">Select an itinerary to create a route</string>
    <string name="button_create_route">Create route</string>
    <string name="select_itinerary_to_create_route">Select an itinerary</string>
    <string name="error_select_itinerary">Cannot create a route without an itinerary selected</string>
    <string name="header_create_route">Create route</string>
    <string name="itinerary_item_add_route">Itinerary n°%d%d %s</string>
    <string name="header_save_itinerary">Save itinerary</string>
    <string name="title_save_itinerary">Order of clients to visit</string>
    <string name="btn_cancel_itinerary_creation">Cancel</string>
    <string name="btn_save_itinerary">Save</string>
    <string name="stop_route_popup_title">Stop the route</string>
    <string name="stop_route_popup_text">Are you sure you want to stop the course?</string>
    <string name="stop_route_confirm_dialog_btn">Confirm</string>
    <string name="stop_route_cancel_dialog_btn">Cancel</string>
    <string name="create_route_on_itinerary_menu">Create route</string>
    <string name="route_is_stopped_action_available">Home</string>
    <string name="route_stopped_description">You had visited all the clients</string>
    <string name="itinerary_num">Itinerary n°</string>
    <string name="route_num">Route n°</string>
</resources>