<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:stretchColumns="1,2">
    <TableRow
        android:background="@color/blue_0">
        <ImageView
            android:layout_width="@dimen/normal_logo"
            android:layout_height="@dimen/normal_logo"
            android:src="@drawable/logo_pathpilot"/>
        <ImageView
            android:layout_width="@dimen/normal_logo"
            android:layout_height="@dimen/normal_logo"
            android:src="@drawable/logo_pathpilot"
            android:layout_column="4"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_marginTop="@dimen/normal_gap"
            android:text="@string/first_name"
            android:textSize="@dimen/normal_text"
            android:layout_column="1"/>
    </TableRow>
    <TableRow
        android:layout_marginBottom="@dimen/micro_gap">
        <EditText
            android:hint="@string/placeholder_first_name"
            android:textSize="@dimen/normal_text"
            android:layout_column="1"
            android:layout_span="2"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/last_name"
            android:textSize="@dimen/normal_text"
            android:layout_column="1"/>
    </TableRow>
    <TableRow>
        <EditText
            android:hint="@string/placeholder_last_name"
            android:textSize="@dimen/normal_text"
            android:layout_marginBottom="@dimen/small_gap"
            android:layout_column="1"
            android:layout_span="2"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/position_lat"
            android:textSize="@dimen/normal_text"
            android:layout_column="1"/>
        <TextView
            android:text="@string/position_long"
            android:textSize="@dimen/normal_text"
            android:layout_column="2"/>
    </TableRow>

    <TableRow
        android:layout_marginBottom="@dimen/micro_gap">
        <EditText
            android:hint="@string/placeholder_position_lat"
            android:textSize="@dimen/normal_text"
            android:layout_column="1"/>
        <EditText
            android:hint="@string/placeholder_position_long"
            android:textSize="@dimen/normal_text"
            android:layout_column="2"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/email"
            android:textSize="@dimen/normal_text"
            android:layout_column="1"/>
    </TableRow>
    <TableRow>
        <EditText
            android:hint="@string/placeholder_email"
            android:textSize="@dimen/normal_text"
            android:layout_column="1"
            android:layout_span="2"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/password"
            android:textSize="@dimen/normal_text"
            android:layout_column="1"/>
    </TableRow>
    <TableRow>
        <EditText
            android:layout_marginBottom="@dimen/big_gap"
            android:textSize="@dimen/normal_text"
            android:layout_column="1"
            android:layout_span="2"/>
    </TableRow>
    <TableRow>
        <Button
            android:layout_height="@dimen/normal_gap"
            android:text="@string/sign_up"
            android:textSize="@dimen/big_text"
            android:backgroundTint="@color/blue_0"
            android:layout_column="1"
            android:layout_span="2"
            android:layout_marginStart="@dimen/big_margin_reduc"
            android:layout_marginEnd="@dimen/big_margin_reduc"/>

    </TableRow>
    <LinearLayout
        android:layout_marginTop="@dimen/big_gap"
        android:gravity="center">
        <TextView
            android:text="@string/already_account"
            android:textSize="@dimen/normal_text"
            android:layout_gravity="right"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <TextView
            android:text="@string/link_sign_in"
            android:textSize="@dimen/normal_text"
            android:textColor="@color/blue_0"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <LinearLayout
        android:orientation="vertical"
        android:background="@color/blue_0"
        android:gravity="center">
        <TextView
            android:text="@string/app_name"
            android:textSize="@dimen/big_text"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/micro_gap"/>
        <TextView
            android:text="@string/informations"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingBottom="@dimen/micro_gap"/>
    </LinearLayout>
</TableLayout>