<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Header -->
    <include layout="@layout/component_header_back_icon"/>

    <!-- Footer -->
    <include layout="@layout/component_footer" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toTopOf="@id/footer">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/form_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="@dimen/form_margin">

            <TextView
                android:id="@+id/title_mandatory_fields"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_gap"
                android:textSize="@dimen/big_text"
                android:text="@string/mandatory_fields"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/title_select_itinerary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normal_text"
                android:text="@string/title_select_itinerary"
                app:layout_constraintTop_toBottomOf="@+id/title_mandatory_fields"
                app:layout_constraintStart_toStartOf="parent"/>

            <Spinner
                android:id="@+id/select_itinerary"
                android:layout_width="match_parent"
                android:layout_height="@dimen/header_text"
                android:hint="@string/select_itinerary"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_select_itinerary"/>

            <Button
                android:id="@+id/button_create_route"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_create_route"
                android:layout_marginTop="@dimen/normal_gap"
                android:layout_marginBottom="@dimen/normal_gap"
                android:textSize="@dimen/normal_text"
                android:backgroundTint="@color/blue_0"
                app:layout_constraintTop_toBottomOf="@id/select_itinerary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
